# 0709

./: .gitignore  HANDOFF.md  README.md  TESTING_METHODS.md  atlas_0709_e2e_smoke.json  atlas_0709_spec.md  pyproject.toml
benchmarks/: bench_atlas_0709_isolated_components.py  bench_flashinfer_masked_verify_full_llama.py  bench_flashinfer_paged_tree_forest.py  bench_hf_kv_components.py
scripts/: gsm8k_eval.py  mtbench_ar_deepseek_eval.py  mtbench_deepseek_eval.py  mtbench_relaxed_spec_deepseek_eval.py  run_gsm8k_1b_ar.sh  run_gsm8k_8b_ar.sh  run_gsm8k_atlas.sh  run_gsm8k_atlas_serial.sh  run_gsm8k_serial_fallback_sweep.py  run_gsm8k_serial_path_weight_sweep.py
src/atlas_0709/: __init__.py  backends.py  builders.py  cli.py  controller.py  distributed_system.py  edge_timeline.py  eval_interventions.py  flashinfer_ar.py  flashinfer_full_verify.py  hf_backend.py  route_store.py  rpc.py  serial_system.py  target_runtime.py  target_server.py  types.py  utils.py  verify.py
src/atlas_0709/flashinfer_paged/: __init__.py  builders.py  flashinfer_backends.py  frontier.py  kv.py  types.py  (+6 more)
tests/: test_drafter_sampling.py  test_eval_interventions.py  test_isolated_component_benchmark.py  test_paged_attention_metadata.py  test_paged_frontier_selection.py  test_req_row_incremental.py  test_tail_page_cow.py  test_target_kv_commit.py  test_tree_dedup.py
tools/: check_async_greedy_equivalence.py  compare_gsm8k_target_intervention.py  smoke_flashinfer_full_verify_src.py  smoke_flashinfer_paged_tree_forest.py  smoke_mock.py  smoke_reuse_handoff.py  smoke_target_incremental_commit.py
